# legged_rl_control

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: a1.xml  controllers.yaml  scene.xml
config/controllers/: pid.yaml
config/robots/: a1_config.yaml
config/training/: a1_training.yaml
launch/: a1_sim.launch.py  simulation.launch.py
legged_rl_control/controllers/: pid_controller.py
legged_rl_control/nodes/: mujoco_sim.py  policy_node.py
legged_rl_control/rl/: policy_network.py  robot_configs.py
legged_rl_control/rl/envs/: legged_env.py
legged_rl_control/rl/wrappers/: domain_randomization.py  normalize_observation.py
legged_rl_control/utils/: logger.py  quat_to_euler.py
scripts/: evaluate_a1.py  test_a1_env.py  train.py  train_a1.py  train_policy.py
