<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>legged_rl_control</name>
  <version>0.0.0</version>
  <description>RL-based legged robot control with MuJoCo</description>
  <maintainer email="k.yavuzkurt1@gmail.com">kayeka</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros_py</depend>
  <depend>robot_state_publisher</depend>

  <exec_depend>mujoco</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>stable_baselines3</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
